[build-system]
requires = ["setuptools", "setuptools-scm", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow"
authors = [
    {name = "QuakeCoRE" },
]
description = "Next generation workflow for type-5 and Pegasus simulations."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[project.scripts]
nshm2022-to-realisation = "workflow.scripts.nshm2022_to_realisation:app"
realisation-to-srf = "workflow.scripts.realisation_to_srf:app"
generate-velocity-model-parameters = "workflow.scripts.generate_velocity_model_parameters:app"
generate-velocity-model = "workflow.scripts.generate_velocity_model:app"
generate-station-coordinates = "workflow.scripts.generate_station_coordinates:app"
generate-model-coordinates = "workflow.scripts.generate_model_coordinates:app"
create-e3d-par = "workflow.scripts.create_e3d_par:app"
generate-stoch = "workflow.scripts.generate_stoch:app"
merge-ts = "merge_ts.merge_ts:main"
hf-sim = "workflow.scripts.hf_sim:app"
bb-sim = "workflow.scripts.bb_sim:app"
plot-ts = "workflow.scripts.plot_ts:app"
im-calc = "workflow.scripts.im_calc:app"

[tool.setuptools.package-dir]
workflow = "workflow"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
